--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 17:05:02 2018</p>
+         Last Run: Wed Nov 21 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,15 +30,15 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>3</td>
                         <td>-1</td>
                         <td>0</td>
-                        <td>55</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SSW</td>
-                        <td>69</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -56,11 +56,11 @@
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>1</td>
-                        <td>-2</td>
-                        <td>1</td>
+                        <td>-3</td>
+                        <td>0</td>
                         <td>67</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>SSW</td>
                         <td>54</td>
                      </tr>
@@ -91,7 +91,7 @@
                "data":[
                  "-1",
                  "-2",
-                 "-2"
+                 "-3"
                ]
              },
              {
@@ -162,7 +162,7 @@
                "data":[
                  "0",
                  "0",
-                 "1"
+                 "0"
                ]
              },
              {
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
+                 "50",
                  "61",
                  "67"
                ]
@@ -182,7 +182,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "69",
+                 "59",
                  "54",
                  "54"
                ]
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 17:05:02 2018</p>
+         Last Run: Wed Nov 21 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -254,31 +254,31 @@
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>85</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>0</td>
                         <td>-3</td>
                         <td>5</td>
-                        <td>64</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>79</td>
+                        <td>81</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>4</td>
-                        <td>62</td>
+                        <td>5</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>74</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -290,7 +290,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>63</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -394,7 +394,7 @@
                "data":[
                  "5",
                  "5",
-                 "4",
+                 "5",
                  "5"
                ]
              },
@@ -405,8 +405,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "70",
-                 "64",
-                 "62",
+                 "65",
+                 "61",
                  "64"
                ]
              },
@@ -416,10 +416,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "85",
-                 "79",
-                 "74",
-                 "63"
+                 "87",
+                 "81",
+                 "77",
+                 "66"
                ]
              }
            ]
@@ -459,7 +459,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 17:05:02 2018</p>
+         Last Run: Wed Nov 21 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -488,7 +488,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>22</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -500,7 +500,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>17</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -510,9 +510,9 @@
                         <td>2</td>
                         <td>50</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>WNW</td>
-                        <td>15</td>
+                        <td>6</td>
+                        <td>NW</td>
+                        <td>5</td>
                      </tr>
                   </tbody>
                </table>
@@ -632,9 +632,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "22",
-                 "17",
-                 "15"
+                 "13",
+                 "8",
+                 "5"
                ]
              }
            ]
@@ -674,7 +674,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 17:05:02 2018</p>
+         Last Run: Wed Nov 21 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,20 +698,20 @@
                         <td>Overcast</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>5</td>
-                        <td>77</td>
+                        <td>4</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>83</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>5</td>
-                        <td>77</td>
+                        <td>4</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -722,12 +722,12 @@
                         <td>Mostly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>5</td>
-                        <td>77</td>
+                        <td>4</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>72</td>
+                        <td>71</td>
                      </tr>
                   </tbody>
                </table>
@@ -825,9 +825,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "5",
-                 "5"
+                 "4",
+                 "4",
+                 "4"
                ]
              },
              {
@@ -836,9 +836,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "77",
-                 "77",
-                 "77"
+                 "78",
+                 "78",
+                 "78"
                ]
              },
              {
@@ -847,9 +847,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "83",
+                 "84",
                  "76",
-                 "72"
+                 "71"
                ]
              }
            ]
