--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 19:05:02 2018</p>
+         Last Run: Wed Nov 21 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>3</td>
-                        <td>-1</td>
+                        <td>Mostly Cloudy</td>
+                        <td>5</td>
+                        <td>2</td>
                         <td>0</td>
-                        <td>50</td>
+                        <td>44</td>
                         <td>0</td>
-                        <td>19</td>
+                        <td>16</td>
                         <td>SSW</td>
-                        <td>59</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>2</td>
-                        <td>-2</td>
+                        <td>3</td>
+                        <td>-1</td>
                         <td>0</td>
-                        <td>55</td>
+                        <td>51</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>SSW</td>
-                        <td>47</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>1</td>
-                        <td>-3</td>
+                        <td>2</td>
+                        <td>-1</td>
                         <td>0</td>
-                        <td>67</td>
+                        <td>57</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SSW</td>
-                        <td>51</td>
+                        <td>52</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,9 +89,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "2",
                  "-1",
-                 "-2",
-                 "-3"
+                 "-1"
                ]
              },
              {
@@ -101,9 +101,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "5",
                  "3",
-                 "2",
-                 "1"
+                 "2"
                ]
              }
            ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
-                 "55",
-                 "67"
+                 "44",
+                 "51",
+                 "57"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "59",
-                 "47",
-                 "51"
+                 "66",
+                 "53",
+                 "52"
                ]
              }
            ]
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 19:05:02 2018</p>
+         Last Run: Wed Nov 21 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -247,38 +247,38 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Overcast</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>-2</td>
+                        <td>-5</td>
                         <td>5</td>
                         <td>70</td>
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>87</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
                         <td>5</td>
-                        <td>65</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>81</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>1</td>
-                        <td>-2</td>
-                        <td>5</td>
-                        <td>61</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>4</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>77</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -290,7 +290,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>66</td>
+                        <td>64</td>
                      </tr>
                   </tbody>
                </table>
@@ -318,9 +318,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
+                 "-5",
                  "-3",
-                 "-2",
+                 "-3",
                  "-4"
                ]
              },
@@ -331,9 +331,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-1",
+                 "-2",
                  "0",
-                 "1",
+                 "0",
                  "0"
                ]
              }
@@ -394,7 +394,7 @@
                "data":[
                  "5",
                  "5",
-                 "5",
+                 "4",
                  "5"
                ]
              },
@@ -405,8 +405,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "70",
-                 "65",
-                 "61",
+                 "64",
+                 "60",
                  "64"
                ]
              },
@@ -416,10 +416,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "87",
-                 "81",
-                 "77",
-                 "66"
+                 "84",
+                 "78",
+                 "73",
+                 "64"
                ]
              }
            ]
@@ -459,7 +459,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 19:05:02 2018</p>
+         Last Run: Wed Nov 21 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -674,7 +674,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 21 19:05:02 2018</p>
+         Last Run: Wed Nov 21 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
