--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 00:05:02 2018</p>
+         Last Run: Thu Nov 22 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -34,23 +34,23 @@
                         <td>-2</td>
                         <td>-5</td>
                         <td>5</td>
-                        <td>71</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>76</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>0</td>
-                        <td>-3</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>4</td>
-                        <td>66</td>
+                        <td>68</td>
                         <td>1</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>68</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>4</td>
-                        <td>62</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>61</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -70,7 +70,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>4</td>
-                        <td>65</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
@@ -103,7 +103,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-5",
-                 "-3",
+                 "-4",
                  "-3",
                  "-3"
                ]
@@ -116,7 +116,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "0",
+                 "-1",
                  "0",
                  "0"
                ]
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
-                 "66",
-                 "62",
-                 "65"
+                 "73",
+                 "68",
+                 "65",
+                 "67"
                ]
              },
              {
@@ -200,9 +200,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "76",
-                 "68",
-                 "61",
+                 "77",
+                 "69",
+                 "63",
                  "50"
                ]
              }
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 00:05:02 2018</p>
+         Last Run: Thu Nov 22 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -264,27 +264,27 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>56</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>WNW</td>
-                        <td>15</td>
+                        <td>W</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>1</td>
-                        <td>-2</td>
                         <td>2</td>
-                        <td>52</td>
+                        <td>0</td>
+                        <td>1</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>WNW</td>
-                        <td>8</td>
+                        <td>W</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -292,11 +292,11 @@
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>50</td>
+                        <td>48</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>WNW</td>
-                        <td>5</td>
+                        <td>WSW</td>
+                        <td>20</td>
                      </tr>
                   </tbody>
                </table>
@@ -324,7 +324,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "-2",
+                 "0",
                  "0"
                ]
              },
@@ -336,7 +336,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "0",
-                 "1",
+                 "2",
                  "2"
                ]
              }
@@ -395,7 +395,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "2",
-                 "2",
+                 "1",
                  "2"
                ]
              },
@@ -405,9 +405,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "52",
-                 "50"
+                 "54",
+                 "50",
+                 "48"
                ]
              },
              {
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "15",
-                 "8",
-                 "5"
+                 "30",
+                 "25",
+                 "20"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 00:05:02 2018</p>
+         Last Run: Thu Nov 22 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -479,39 +479,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>4</td>
-                        <td>74</td>
+                        <td>5</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>83</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>4</td>
-                        <td>75</td>
+                        <td>5</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>75</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-1</td>
-                        <td>-5</td>
-                        <td>4</td>
-                        <td>75</td>
+                        <td>Overcast</td>
+                        <td>0</td>
+                        <td>-4</td>
+                        <td>5</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>11</td>
                         <td>SW</td>
-                        <td>70</td>
+                        <td>92</td>
                      </tr>
                   </tbody>
                </table>
@@ -540,7 +540,7 @@
                "data":[
                  "-4",
                  "-4",
-                 "-5"
+                 "-4"
                ]
              },
              {
@@ -552,7 +552,7 @@
                "data":[
                  "-1",
                  "-1",
-                 "-1"
+                 "0"
                ]
              }
            ]
@@ -609,9 +609,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "4",
-                 "4"
+                 "5",
+                 "5",
+                 "5"
                ]
              },
              {
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "74",
-                 "75",
-                 "75"
+                 "76",
+                 "77",
+                 "78"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "83",
                  "75",
-                 "70"
+                 "86",
+                 "92"
                ]
              }
            ]
