--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 01:05:02 2018</p>
+         Last Run: Thu Nov 22 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -32,11 +32,11 @@
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-2</td>
-                        <td>-5</td>
+                        <td>-4</td>
                         <td>5</td>
-                        <td>73</td>
+                        <td>74</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>S</td>
                         <td>77</td>
                      </tr>
@@ -48,7 +48,7 @@
                         <td>4</td>
                         <td>68</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>S</td>
                         <td>69</td>
                      </tr>
@@ -60,9 +60,9 @@
                         <td>4</td>
                         <td>65</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>S</td>
-                        <td>63</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>4</td>
-                        <td>67</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>50</td>
+                        <td>46</td>
                      </tr>
                   </tbody>
                </table>
@@ -102,7 +102,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
+                 "-4",
                  "-4",
                  "-3",
                  "-3"
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
+                 "74",
                  "68",
                  "65",
-                 "67"
+                 "66"
                ]
              },
              {
@@ -202,8 +202,8 @@
                "data":[
                  "77",
                  "69",
-                 "63",
-                 "50"
+                 "62",
+                 "46"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 01:05:02 2018</p>
+         Last Run: Thu Nov 22 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -264,7 +264,7 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
@@ -272,19 +272,19 @@
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>30</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>50</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>25</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -292,9 +292,9 @@
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>48</td>
+                        <td>49</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>WSW</td>
                         <td>20</td>
                      </tr>
@@ -395,7 +395,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "2",
-                 "1",
+                 "2",
                  "2"
                ]
              },
@@ -407,7 +407,7 @@
                "data":[
                  "54",
                  "50",
-                 "48"
+                 "49"
                ]
              },
              {
@@ -416,8 +416,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "30",
-                 "25",
+                 "28",
+                 "24",
                  "20"
                ]
              }
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 01:05:02 2018</p>
+         Last Run: Thu Nov 22 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -483,11 +483,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>76</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>75</td>
+                        <td>76</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -495,7 +495,7 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>77</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -504,12 +504,12 @@
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
-                        <td>0</td>
+                        <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>78</td>
+                        <td>80</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SW</td>
                         <td>92</td>
                      </tr>
@@ -552,7 +552,7 @@
                "data":[
                  "-1",
                  "-1",
-                 "0"
+                 "-1"
                ]
              }
            ]
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
                  "77",
-                 "78"
+                 "78",
+                 "80"
                ]
              },
              {
@@ -631,7 +631,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "75",
+                 "76",
                  "86",
                  "92"
                ]
