--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 04:05:07 2018</p>
+         Last Run: Thu Nov 22 05:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -30,7 +30,7 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>-2</td>
                         <td>-4</td>
                         <td>5</td>
@@ -38,19 +38,19 @@
                         <td>0</td>
                         <td>6</td>
                         <td>S</td>
-                        <td>78</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>68</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>72</td>
+                        <td>76</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>65</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -177,7 +177,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "5",
+                 "4",
                  "4",
                  "5"
                ]
@@ -200,9 +200,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "78",
-                 "72",
-                 "65",
+                 "87",
+                 "76",
+                 "66",
                  "50"
                ]
              }
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 04:05:07 2018</p>
+         Last Run: Thu Nov 22 05:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,7 +268,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
@@ -405,7 +405,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
+                 "55",
                  "50",
                  "49"
                ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 04:05:07 2018</p>
+         Last Run: Thu Nov 22 05:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 04:05:07 2018</p>
+         Last Run: Thu Nov 22 05:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -710,7 +710,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>83</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -722,7 +722,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>6</td>
-                        <td>84</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -836,8 +836,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "84",
-                 "83",
-                 "84"
+                 "84",
+                 "85"
                ]
              },
              {
