--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 08:05:02 2018</p>
+         Last Run: Thu Nov 22 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -32,13 +32,13 @@
                         <td>12:00 PM</td>
                         <td>Overcast</td>
                         <td>-2</td>
-                        <td>-4</td>
+                        <td>-5</td>
                         <td>5</td>
-                        <td>74</td>
+                        <td>73</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>S</td>
-                        <td>85</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -48,7 +48,7 @@
                         <td>4</td>
                         <td>68</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>S</td>
                         <td>74</td>
                      </tr>
@@ -58,23 +58,23 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>4</td>
-                        <td>65</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>64</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-1</td>
-                        <td>-4</td>
+                        <td>-5</td>
                         <td>5</td>
                         <td>67</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SSE</td>
-                        <td>49</td>
+                        <td>51</td>
                      </tr>
                   </tbody>
                </table>
@@ -102,10 +102,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-5",
                  "-4",
                  "-4",
-                 "-4",
-                 "-4"
+                 "-5"
                ]
              },
              {
@@ -188,9 +188,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "74",
+                 "73",
                  "68",
-                 "65",
+                 "66",
                  "67"
                ]
              },
@@ -200,10 +200,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "85",
+                 "84",
                  "74",
-                 "64",
-                 "49"
+                 "65",
+                 "51"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 08:05:02 2018</p>
+         Last Run: Thu Nov 22 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -292,7 +292,7 @@
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>48</td>
+                        <td>49</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
@@ -407,7 +407,7 @@
                "data":[
                  "54",
                  "49",
-                 "48"
+                 "49"
                ]
              },
              {
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 08:05:02 2018</p>
+         Last Run: Thu Nov 22 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -479,7 +479,7 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
@@ -487,7 +487,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>80</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -507,11 +507,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>96</td>
+                        <td>95</td>
                      </tr>
                   </tbody>
                </table>
@@ -622,7 +622,7 @@
                "data":[
                  "76",
                  "79",
-                 "80"
+                 "81"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
+                 "79",
                  "90",
-                 "96"
+                 "95"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 22 08:05:02 2018</p>
+         Last Run: Thu Nov 22 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -722,7 +722,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>5</td>
-                        <td>83</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -837,7 +837,7 @@
                "data":[
                  "83",
                  "83",
-                 "83"
+                 "84"
                ]
              },
              {
