--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 01:05:06 2018</p>
+         Last Run: Mon Nov 26 02:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -36,33 +36,33 @@
                         <td>6</td>
                         <td>79</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>SW</td>
-                        <td>93</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>2</td>
-                        <td>-1</td>
-                        <td>8</td>
-                        <td>76</td>
+                        <td>-2</td>
+                        <td>7</td>
+                        <td>75</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>SW</td>
-                        <td>93</td>
+                        <td>95</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
-                        <td>2</td>
-                        <td>-1</td>
-                        <td>5</td>
-                        <td>76</td>
+                        <td>3</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>5</td>
+                        <td>75</td>
+                        <td>0</td>
+                        <td>11</td>
                         <td>SW</td>
-                        <td>96</td>
+                        <td>97</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,8 +90,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-1",
-                 "-1",
-                 "-1"
+                 "-2",
+                 "0"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "2",
                  "2",
-                 "2"
+                 "3"
                ]
              }
            ]
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "6",
-                 "8",
+                 "7",
                  "5"
                ]
              },
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "79",
-                 "76",
-                 "76"
+                 "75",
+                 "75"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "93",
-                 "93",
-                 "96"
+                 "94",
+                 "95",
+                 "97"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 01:05:06 2018</p>
+         Last Run: Mon Nov 26 02:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>74</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -261,11 +261,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>76</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>4</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -273,7 +273,7 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>4</td>
-                        <td>79</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "73",
                  "74",
-                 "76",
-                 "79"
+                 "77"
                ]
              },
              {
@@ -398,7 +398,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "5",
-                 "4",
+                 "5",
                  "4"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 01:05:06 2018</p>
+         Last Run: Mon Nov 26 02:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-3</td>
-                        <td>-6</td>
-                        <td>10</td>
-                        <td>71</td>
-                        <td>1</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-4</td>
+                        <td>-7</td>
                         <td>8</td>
-                        <td>NNW</td>
-                        <td>43</td>
+                        <td>73</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>N</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-3</td>
-                        <td>-6</td>
-                        <td>10</td>
-                        <td>67</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>N</td>
-                        <td>55</td>
-                     </tr>
-                     <tr>
-                        <td>03:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>12</td>
-                        <td>67</td>
+                        <td>8</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>66</td>
+                        <td>78</td>
+                     </tr>
+                     <tr>
+                        <td>03:00 PM</td>
+                        <td>Overcast</td>
+                        <td>-3</td>
+                        <td>-6</td>
+                        <td>9</td>
+                        <td>68</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>NNE</td>
+                        <td>80</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
+                 "-7",
                  "-6",
                  "-6"
                ]
@@ -531,7 +531,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-3",
+                 "-4",
                  "-3",
                  "-3"
                ]
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "10",
-                 "10",
-                 "12"
+                 "8",
+                 "8",
+                 "9"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
-                 "67",
-                 "67"
+                 "73",
+                 "70",
+                 "68"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "43",
-                 "55",
-                 "66"
+                 "75",
+                 "78",
+                 "80"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 01:05:06 2018</p>
+         Last Run: Mon Nov 26 02:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -675,39 +675,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>33</td>
+                        <td>21</td>
                         <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>80</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Snow Showers</td>
-                        <td>-3</td>
-                        <td>-7</td>
-                        <td>33</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-4</td>
+                        <td>-8</td>
+                        <td>8</td>
                         <td>64</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNW</td>
-                        <td>74</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>33</td>
+                        <td>8</td>
                         <td>60</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>70</td>
+                        <td>67</td>
                      </tr>
                   </tbody>
                </table>
@@ -735,7 +735,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-8",
-                 "-7",
+                 "-8",
                  "-7"
                ]
              },
@@ -747,7 +747,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-4",
-                 "-3",
+                 "-4",
                  "-3"
                ]
              }
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "33",
-                 "33",
-                 "33"
+                 "21",
+                 "8",
+                 "8"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
-                 "74",
-                 "70"
+                 "84",
+                 "75",
+                 "67"
                ]
              }
            ]
